# CricketSim

./: CMakeLists.txt  README.md  Simulate_delivery.cpp  csv_to_distribution.py  first_attempt.cpp  main.cpp  main2.cpp  simulate_cricket.cpp  yaml_to_csv.cpp  yaml_to_csv.py
CoreCricket/include/: batsman.h  bowler.h  cricket_core.h  innings.h  match.h  play.h
CoreCricket/src/: cricket_core.cpp  innings.cpp  play.cpp
CoreStatistics/: batsman.h  cricket_core.h  match_state.h  play.cpp  play.h
DeliverySimulator/: CMakeLists.txt
DeliverySimulator/include/: delivery_simulator.h
DeliverySimulator/src/: delivery_simulator.cpp
SimulateCricket/: simulate_cricket.h
data/: File_100_files.csv
